platform/networking/network-policies/rules/allow/egress/transaction-service/allow-account-service.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-account-service
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: transaction-service
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              tier: workloads
          podSelector:
            matchLabels:
              network-role: backend
              app.kubernetes.io/name: account-service
      ports:
        - protocol: TCP
          port: 8082
