platform/networking/network-policies/rules/allow/egress/transaction-service/allow-document-service.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-document-service
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: transaction-service
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              tier: workloads
          podSelector:
            matchLabels:
              network-role: backend
              app.kubernetes.io/name: document-service
      ports:
        - protocol: TCP
          port: 8084
